# PalmDock

./: README.md
Client/PalmDock/: settings.gradle
Client/PalmDock/app/: build.gradle
Client/PalmDock/app/src/androidTest/java/com/hong/palmdock/: ExampleInstrumentedTest.java
Client/PalmDock/app/src/main/: AndroidManifest.xml
Client/PalmDock/app/src/main/java/com/hong/palmdock/: MainActivity.java  OperateActivity.java  SendDateTypeEnum.java  SocketService.java
Client/PalmDock/app/src/main/java/com/hong/palmdock/adapters/: ServerConfigAdapter.java
Client/PalmDock/app/src/main/java/com/hong/palmdock/controls/: DialogManager.java  DialogView.java  VerticalSeekBar.java
Client/PalmDock/app/src/main/java/com/hong/palmdock/models/: DockItem.java  LinkServer.java  RequestModel.java
Client/PalmDock/app/src/main/res/drawable/: shape_btn_blue_bg.xml  shape_circle.xml  shape_server_item.xml
Client/PalmDock/app/src/main/res/layout/: activity_main.xml  activity_operate.xml  dialog_add_server_layout.xml  sever_list_item.xml
Client/PalmDock/app/src/main/res/values/: colors.xml  strings.xml  style.xml  themes.xml
Client/PalmDock/app/src/main/res/values-night/: themes.xml
Client/PalmDock/app/src/test/java/com/hong/palmdock/: ExampleUnitTest.java
Client/PalmDock/gradle/wrapper/: gradle-wrapper.properties
Client/PalmDock/jks/: release.jks
Server/PalmDock/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
Server/PalmDock/controls/: additemdialog.cpp  additemdialog.h  keysequencelineedit.cpp  keysequencelineedit.h  squarebutton.cpp  squarebutton.h  switchbutton.cpp  switchbutton.h
Server/PalmDock/utils/: brightness.cpp  brightness.h  dockitem.cpp  dockitem.h  hotkeytools.cpp  hotkeytools.h  picturetools.cpp  picturetools.h  server.cpp  server.h  volume.cpp  volume.h
